--- a/webapp/index.html
+++ b/webapp/index.html
@@ -20,7 +20,7 @@
     //   oView.placeAt('content');
       var oViewXML = new sap.ui.view({
         viewName: 'chip.view.MyXML',
-        type: 'XML',
+        type: sap.ui.core.mvc.ViewType.XML,
       });
       oViewXML.placeAt("canvas")
     </script>
